--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "websockets",
     "redis[hiredis]",
     "httpx",
+    "nest-asyncio>=1.5.0",
 ]
 
 [project.optional-dependencies]
