--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "langchain>=0.3.0",
     "langchain-anthropic>=0.2.0",
     "langgraph>=0.2.0",
-    "composio-langchain>=0.6.0",
+    "langchain-community>=0.3.0",
+    "duckduckgo-search>=6.0.0",
     "crawl4ai>=0.4.0",
     "pydantic>=2.0",
     "python-dotenv>=1.0.0",
