feat: add auto-scroll and custom gauge component for claims feed visualization

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "redis[hiredis]",
     "httpx",
     "nest-asyncio>=1.5.0",
+    "composio",
+    "youtube-transcript-api",
 ]
 
 [project.optional-dependencies]
