--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.3",
